name:            duhast
version:         0.1
license:         BSD3
license-file:    LICENSE
author:          dan corson <danl@alum.mit.edu>
synopsis:        <syn>
build-type:      Simple
build-depends:   base,
                 haskell-src-exts

executable:      duhast
main-is:         Main.hs
hs-source-dirs:  src
